fix /shutdown